--- a/source/package.json
+++ b/source/package.json
@@ -1,13 +1,13 @@
 {
     "dependencies": {
-        "axios": "^0.15.3",
+        "axios": "^0.16.2",
         "barba.js": "^1.0.0",
-        "bugsnag-js": "^3.1.0",
-        "babel-polyfill": "^6.23.0",
-        "lazysizes": "^3.0.0",
+        "bugsnag-js": "^3.2.2",
+        "babel-polyfill": "^6.26.0",
+        "lazysizes": "^4.0.0-rc3",
         "lodash": "^4.17.4",
-        "vue": "^2.2.6",
-        "vue-i18n": "^5.0.3",
-        "vuex": "^2.2.1"
+        "vue": "^2.4.4",
+        "vue-i18n": "^7.3.0",
+        "vuex": "^2.4.0"
     }
 }
