--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
         "barba.js": "^1.0.0",
         "bugsnag-js": "^3.2.2",
         "babel-polyfill": "^6.26.0",
+        "custom-event-polyfill": "^1.0.6",
         "lazysizes": "^4.0.0-rc3",
         "popmotion": "^8.4.1",
         "vue": "^2.4.4",
